--- a/FrontEnd/ecommerce/src/Style/Navbar.css
+++ b/FrontEnd/ecommerce/src/Style/Navbar.css
@@ -8,6 +8,8 @@
     font-size: 32px;
     font-family: 'Arial Black', sans-serif;
     font-weight: 900;
+    color: black;
+    text-decoration: none;
 }
 .itemNav{
     width: 35%;
