--- a/FrontEnd/ecommerce/src/Style/ProductDetail.css
+++ b/FrontEnd/ecommerce/src/Style/ProductDetail.css
@@ -1,6 +1,8 @@
 .ProductDetail{
     padding: 20px 70px;
-
+}
+.flex{
+    display: flex;
 }
 .inforProduct{
     display: flex;
@@ -10,15 +12,21 @@
     border-top: 1px solid #f0f0f0;
 }
 .thumbnail{
+    width: 22%;
     display: flex;
     flex-direction: column;
     row-gap: 10px;
 }
 .ImageThumbnail{
-    width: 150px;
+    width: 100%;
     height: 180px;
     border-radius: 20px;
     border: 1px solid transparent
+}
+.navigate{
+    display: flex;
+    gap: 20px;
+    align-items: center;
 }
 .imageProduct{
     display: flex;
@@ -35,7 +43,9 @@
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
 }
-
+.customCumment{
+    width: 43%;
+}
 .fade-in{
     opacity: 1;
 }
@@ -46,8 +56,8 @@
     margin-top: 15px;
 }
 .PreviewImage{
-    width: 550px;
-    height: 625px;
+    width: 100%;
+    height: 630px;
 }
 .mainContent{
     margin-top: 15px;
@@ -76,7 +86,6 @@
     margin-block-end: 0;
 }
 .star-Product{
-    display: flex;
     gap: 10px;
 }
 .mainContent{
@@ -88,9 +97,12 @@
     border-radius: 100%;
     width: 50px;
     height: 50px;
-}
-.colorZone{
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.colorZone{
     gap: 20px;
 }
 .color1{
@@ -103,7 +115,6 @@
     background-color: #31344F;
 }
 .sizeZone{
-    display: flex;
     gap: 20px
 }
 .size{
@@ -112,14 +123,12 @@
     background-color: #F0F0F0;
 }
 .quantity{
-    display: flex;
     flex: 0.2;
     padding: 12px 24px;
     border-radius: 20px;
     background-color: #F0F0F0;
 }
 .amount{
-    display: flex;
     flex-direction: row;
     gap:30px;
     justify-content: space-between;
@@ -134,7 +143,6 @@
   margin: 0;
 }
 .no-spinners {
-    display: flex;
     text-align: center;
     background-color: transparent;
     border: none;
@@ -150,4 +158,43 @@
 }
 .addBtn{
     margin-top: 0;
+}
+.SideBar{
+    justify-content: space-between;
+    padding: 20px 0px;
+    border-bottom: 1px solid #f0f0f0;
+}
+.SideBar a{
+    text-align: center;
+    width: 33%;
+    text-decoration: none;
+    color: #00000099;
+}
+.selectOption{
+    padding: 10px 20px;
+    background-color: #f0f0f0;
+    border: none;
+    border-radius: 20px;
+}
+#productDetail{
+    margin-top: 30px;
+}
+.btnWrite{
+    margin: 0;
+}
+.filter{
+    gap: 20px;
+}
+.commentZoneProduct{
+    margin-top: 30px;
+    display: flex;
+    gap:10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.btnView{
+    width: 240px;
+}
+.commentProductFix{
+    width: 44%;
 }
